Updated history page, telephone link, and article padding
+ The history page now has a section on the current executive director and three new images
+ The broken Karis Home telephone link has been fixed
+ The margin issue with the ordered list on the statment of faith has been corrected
+ Fixed an issue where the slideshow dots intersected the caption

--- a/_includes/slick-theme.css
+++ b/_includes/slick-theme.css
@@ -117,13 +117,13 @@
 /* Dots */
 .slick-dotted.slick-slider
 {
-    margin-bottom: 30px;
+    margin-bottom: 55px;
 }
 
 .slick-dots
 {
     position: absolute;
-    bottom: -25px;
+    /*bottom: -25px; For compatibility with small screens and long captions*/
 
     display: block;
 
