--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -119,7 +119,7 @@
         </li>
 
         <li class="textbox  footer__list">
-          <p><strong>Karis Home (Women &amp; Children)</strong><br>1228 E Baltimore St.<br>Baltimore, Maryland 21202-4622<br><a href="4103421323">(410) 342-1323</a></p>
+          <p><strong>Karis Home (Women &amp; Children)</strong><br>1228 E Baltimore St.<br>Baltimore, Maryland 21202-4622<br><a href="tel:4103421323">(410) 342-1323</a></p>
         </li>
       </ul>
 
@@ -153,7 +153,7 @@ $(document).ready(function(){
 		accessible: true,
 		lazyLoad: 'ondemand',
 		dots: true,
-		adaptiveHeight: true,
+		adaptiveHeight: false,
 		slidesToShow: 1
   });
 });
@@ -167,7 +167,7 @@ $(document).ready(function(){
 		accessible: true,
 		lazyLoad: 'ondemand',
 		dots: true,
-		adaptiveHeight: true,
+		adaptiveHeight: false,
 		slidesToShow: 3,
 		responsive: [
 			{
