Added new video to site
The homepage now prominently features the Baltimore Rescue Mission and Karis Home 2019 Video, and the site has been updated with links to the BRM YouTube page. A subtle gradient  consisting of the Mission's brand colors was added to the  Donate button to help catch the eye.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -126,7 +126,7 @@
       <ul class="row  footer__social">
           <li class="footer__social-item"><a aria-label="Email Baltimore Rescue Mission" href="mailto:baltimorerescuemission@gmail.com" class="icon-mail"></a></li>
 
-          <li class="footer__social-item"><a aria-label="Visit Baltimore Rescue Mission on YouTube" href="{{ "/contact#youtube" | relative_url }}" target="_blank"  class="icon-youtube"></a></li>
+          <li class="footer__social-item"><a aria-label="Visit Baltimore Rescue Mission on YouTube" href="https://www.youtube.com/channel/UCw6ieoEP2b6a2AgWZeMU9cg" target="_blank"  class="icon-youtube"></a></li>
           
           <li class="footer__social-item"><a aria-label="Find Baltimore Rescue Mission on Facebook" href="https://www.facebook.com/baltimorerescuemission/" target="_blank"  class="icon-facebook2"></a></li>
         </ul>
